--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
-theme: jekyll-theme-minimal
-title: ricantech
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-themetitle: ricantech
 description: Bookmark this to keep an eye on my project updates!
