--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: RICAN::TECH
+title: rican::tech
 email: michal.rican@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Java / Kotlin / Micronaut / Software Development
