--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,9 @@ twitter_username: rican_tech
 github_username:  ricantech
 
 # Build settings
-theme: minima
+remote_theme: pages-themes/tactile@v0.2.0
 plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 
 # Exclude from processing.
 # The following items will not be processed, by default.
