--- a/_config.yml
+++ b/_config.yml
@@ -21,17 +21,18 @@
 title: rican::tech
 email: michal.rican@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Java / Kotlin / Micronaut / Software Development
+Software Developer
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: rican_tech
 github_username:  ricantech
 
 # Build settings
-remote_theme: pages-themes/tactile@v0.2.0
+theme: minima
+minima:
+  skin: dark
 plugins:
-- jekyll-feed
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+  - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
