--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: rican::tech
+title: "rican::tech"
 email: michal.rican@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-Software Developer
+description: "Software Developer"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: rican_tech
