--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,9 @@
 # in the templates via {{ site.myvariable }}.
 
 title: "rican::tech"
-email: michal.rican@gmail.com
-description: "Software Developer"
+email: michal.rican@gmail.com.com
+description: >- # this means to ignore newlines until "baseurl:"
+  Write an awesome description for your new site here. You can edit this
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: rican_tech
@@ -29,7 +30,7 @@ github_username:  ricantech
 # Build settings
 theme: minima
 minima:
-  skin: dark
+  skins: dark
 plugins:
   - jekyll-feed
 
